[package]
name = "rauc-health"
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]
clap = { version = "=4.5.47", features = ["derive"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# ... deine anderen Pakete ...
env_logger = "0.11"
# Füge dies hinzu, um die transitive Version zu "überschreiben"
env_filter = "=0.1.3"
jiff = "=0.2.16"

[dev-dependencies]
tempfile = "=3.23.0"
once_cell = "1"

