[package]
name = "rauc-health"
version = "0.1.0"
edition = "2021"

[dependencies]
# Direkte Abhängigkeiten mit aktivierten Features
clap = { version = "=4.5.47", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
toml = "=0.8.23"
log = "=0.4.29"
env_logger = "=0.11.8"
jiff = "=0.2.16"
jiff-static = "=0.2.16"
portable-atomic = "=1.11.1"

# Transitive Abhängigkeiten (Fixiert für BitBake-Konsistenz)
aho-corasick = "=1.1.4"
anstream = "=0.6.21"
anstyle = "=1.0.13"
anstyle-parse = "=0.2.7"
anstyle-query = "=1.1.5"
anstyle-wincon = "=3.0.11"
bitflags = "=2.10.0"
cfg-if = "=1.0.4"
clap_builder = "=4.5.47"
clap_derive = "=4.5.47"
clap_lex = "=0.7.6"
colorchoice = "=1.0.4"
env_filter = "=0.1.3"
equivalent = "=1.0.2"
errno = "=0.3.14"
fastrand = "=2.3.0"
getrandom = "=0.3.4"
hashbrown = "=0.16.1"
heck = "=0.5.0"
indexmap = "=2.12.1"
is_terminal_polyfill = "=1.70.2"
jiff-tzdb = "=0.1.5"
jiff-tzdb-platform = "=0.1.3"
libc = "=0.2.178"
linux-raw-sys = "=0.11.0"
memchr = "=2.7.6"
once_cell = "=1.21.3"
once_cell_polyfill = "=1.70.2"
portable-atomic-util = "=0.2.4"
proc-macro2 = "=1.0.104"
quote = "=1.0.42"
r-efi = "=5.3.0"
regex = "=1.12.2"
regex-automata = "=0.4.13"
regex-syntax = "=0.8.8"
rustix = "=1.1.3"
serde_core = "=1.0.228"
serde_derive = "=1.0.228"
serde_spanned = "=0.6.9"
strsim = "=0.11.1"
syn = "=2.0.111"
tempfile = "=3.23.0"
toml_datetime = "=0.6.11"
toml_edit = "=0.22.27"
toml_write = "=0.1.2"
unicode-ident = "=1.0.22"
utf8parse = "=0.2.2"
wasip2 = "=1.0.1+wasi-0.2.4"
windows-link = "=0.2.1"
windows-sys = "=0.61.2"
winnow = "=0.7.14"
wit-bindgen = "=0.46.0"
[dev-dependencies]
tempfile = "=3.23.0"
once_cell = "1"

