[package]
name = "rauc-health"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Direkte Abh채ngigkeiten (mit Features f체r Macros) ---
clap = { version = "=4.5.47", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
toml = "=0.8.23"
log = "=0.4.29"
env_logger = "=0.11.8"
jiff = "=0.2.16"
jiff-static = "=0.2.16"
portable-atomic = "=1.11.1"
anyhow = "=1.0.100"

# --- Transitive Abh채ngigkeiten (Fixiert f체r BitBake/Yocto) ---
aho-corasick = "=1.1.4"
allocator-api2 = "=0.2.21"
anstream = "=0.6.21"
anstyle = "=1.0.13"
anstyle-parse = "=0.2.7"
anstyle-query = "=1.1.5"
anstyle-wincon = "=3.0.11"
bitflags = "=2.10.0"
cfg-if = "=1.0.4"
clap_builder = "=4.5.47"
clap_derive = "=4.5.47"
clap_lex = "=0.7.6"
colorchoice = "=1.0.4"
env_filter = "=0.1.3"
equivalent = "=1.0.2"
errno = "=0.3.14"
fastrand = "=2.3.0"
foldhash = "=0.1.5"
futures = "=0.3.31"
futures-channel = "=0.3.31"
futures-core = "=0.3.31"
futures-executor = "=0.3.31"
futures-io = "=0.3.31"
futures-macro = "=0.3.31"
futures-sink = "=0.3.31"
futures-task = "=0.3.31"
futures-util = "=0.3.31"
getrandom = "=0.3.4"
hashbrown = "=0.16.1"
heck = "=0.5.0"
id-arena = "=2.2.1"
indexmap = "=2.12.1"
is_terminal_polyfill = "=1.70.2"
itoa = "=1.0.17"
jiff-tzdb = "=0.1.5"
jiff-tzdb-platform = "=0.1.3"
leb128fmt = "=0.1.0"
libc = "=0.2.178"
linux-raw-sys = "=0.11.0"
memchr = "=2.7.6"
once_cell = "=1.21.3"
once_cell_polyfill = "=1.70.2"
pin-project-lite = "=0.2.16"
pin-utils = "=0.1.0"
portable-atomic-util = "=0.2.4"
prettyplease = "=0.2.37"
proc-macro2 = "=1.0.104"
quote = "=1.0.42"
r-efi = "=5.3.0"
regex = "=1.12.2"
regex-automata = "=0.4.13"
regex-syntax = "=0.8.8"
rustix = "=1.1.3"
semver = "=1.0.27"
serde_core = "=1.0.228"
serde_derive = "=1.0.228"
serde_json = "=1.0.148"
serde_spanned = "=0.6.9"
slab = "=0.4.11"
strsim = "=0.11.1"
syn = "=2.0.111"
tempfile = "=3.23.0"
toml_datetime = "=0.6.11"
toml_edit = "=0.22.27"
toml_write = "=0.1.2"
unicode-ident = "=1.0.22"
unicode-xid = "=0.2.6"
utf8parse = "=0.2.2"
wasip2 = "=1.0.1" 
wasm-encoder = "=0.239.0"
wasm-metadata = "=0.239.0"
wasmparser = "=0.239.0"
windows-link = "=0.2.1"
windows-sys = "=0.61.2"
winnow = "=0.7.14"
wit-bindgen = "=0.46.0"
wit-bindgen-core = "=0.46.0"
wit-bindgen-rust = "=0.46.0"
wit-bindgen-rust-macro = "=0.46.0"
wit-component = "=0.239.0"
wit-parser = "=0.239.0"
zmij = "=1.0.3"

[dev-dependencies]
tempfile = "=3.23.0"
once_cell = "1"
serial_test = "3"
[features]
system-tests = []
